--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="hero-body">
       <img src="static/images/overview.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        We introduce the first autoregressive model for monocular depth estimation (MDE), called DAR — a simple, effective, and scalable framework. Our key insight lies in transforming two ordered properties in MDE, depth map resolution and granularity, into autoregressive objectives. By recast MDE as a coarse-to-fine autoregressive objective process, DAR can be easily scaled up to larger size to obtain better performance and generalization.
+        An overview of our STORM benchmark. STORM consists of four key components: 1) Broad domain data (14 datasets across 5 domains); 2) diverse level annotations; 3) coarse-to-fine CoT; 4) all-in-one visual rating framework.
       </h2>
     </div>
   </div>
@@ -156,8 +156,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            This paper shows that the autoregressive model is an effective and scalable monocular depth estimator. Our idea is simple: We tackle the monocular depth estimation (MDE) task with an autoregressive prediction paradigm, based on two core designs. First, our depth autoregressive model (DAR) treats the depth map of different resolutions as a set of tokens, and conducts the low-to-high resolution autoregressive objective with a patch-wise casual mask. Second, our DAR recursively discretizes the entire depth range into more compact intervals, and attains the coarse-to-fine granularity autoregressive objective in an ordinal-regression manner. By coupling these two autoregressive objectives, our DAR establishes new state-of-the-art (SOTA) on KITTI and NYU Depth v2 by clear margins. Further, our scalable approach allows us to scale the model up to 2.0B and achieve the best RMSE of 1.799 on the KITTI dataset (5% improvement) compared to 1.896 by the current SOTA (Depth Anything). DAR further showcases zero-shot generalization ability on unseen datasets. These results suggest that DAR yields superior performance with an autoregressive prediction paradigm, providing a promising approach to equip modern autoregressive large models (e.g., GPT-4o) with depth estimation capabilities.
-          </p>
+            Visual rating is an essential capability of artificial intelligence (AI) for multidimensional quantification of visual content, primarily applied in ordinal regression (OR) tasks such as image quality assessment, facial age estimation, and medical image grading.  However, current multi-modal large language models (MLLMs) under-perform in such visual rating ability while also suffering the lack of relevant datasets and benchmarks.  In this work, we collect and present STORM, a data collection and benchmark for Stimulating Trustworthy Ordinal Regression Ability of MLLMs for universal visual rating.  STORM encompasses 14 ordinal regression datasets across five common visual rating domains, comprising 655K image-level pairs and the corresponding carefully curated VQAs.  Importantly, we also propose a coarse-to-fine processing pipeline that dynamically considers label candidates and provides interpretable thoughts, providing MLLMs with a general and trustworthy ordinal thinking paradigm.  This benchmark aims to evaluate the all-in-one and zero-shot performance of MLLMs in scenarios requiring understanding of the essential common ordinal relationships of rating labels.  Extensive experiments demonstrate the effectiveness of our framework and shed light on better fine-tuning strategies.  The STORM dataset, benchmark, and pre-trained models are available on the following webpage to support further research in this area.
         </div>
       </div>
     </div>
@@ -165,112 +164,6 @@
 </section>
 <!-- End paper abstract -->
 
-
-
-<section class="section hero is-small">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-full">
-        <div class="content">
-          <h2 class="title is-3">Motivation: Where is Autoregressive Objectives？</h2>
-
-          <div class="columns">
-            <div class="column is-two-thirds">
-              <p>We exploit two “order” properties of the MDE task that can be transformed into two autoregressive objectives. (a) Resolution autoregressive objective: The generation of depth maps can follow a resolution order from low to high. For each step of the resolution autoregressive process, the Transformer predicts the next higher-resolution token map conditioned on all the previous ones. (b) Granularity autoregressive objective: The range of depth values is ordered, from 0 to specific max values. For each step of the granularity autoregressive process, we increase exponentially the number of bins (e.g., doubling the bin number), and utilize the previous predictions to predict a more refined depth with a smaller and more refined granularity. 
-              </p>
-              <p>Motivated by this, we propose DAR, which cast the MDE into autoregressive framework that aims to perform these two autoregressive processes simultaneously.
-              </p>
-            </div>
-            <div class="column is-one-third">
-              <img src="static/images/motivation.jpg" alt="Weight distance correlation" class="blend-img-background center-image" style="max-width: 110%; height: auto;" />
-              <em><strong>Motivation:</strong></em> Two 'order' properties that naturally become autoregressive objectives.
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-<section class="section hero is-small is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-full">
-        <div class="content">
-          <h2 class="title is-3">Largest Model Trees on Hugging Face</h2>
-          <div class="level-set has-text-justified">
-<p>
-                    <img src="/probex/static/images/model_sizes.png" alt="Sizes of model trees" class="blend-img-background center-image" style="max-width: 100%; height: auto;" />
-          </p>
-              <p>
-                We show the 10 largest Model Trees on Hugging Face. Our insight is that learning an expert for each tree greatly simplifies weight-space learning. This is a practical setting as a few large Model Trees dominate the landscape.
-              </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-<section class="section hero is-small">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-full">
-        <div class="content">
-          <h2 class="title is-3">Probing Experts (ProbeX)</h2>
-          <p>
-          <img src="/probex/static/images/ProbeX_overview.png" alt="ProbeX Overview" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
-          </p>
-           <p>
-              Unlike conventional probing methods that operate only on inputs and outputs, our lightweight architecture scales weight-space learning to large models by probing hidden model layers. ProbeX begins by passing a set of learned probes, 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi mathvariant="bold">u</mi><mo>_</mo><mn>1</mn><mo>,</mo><mi mathvariant="bold">u</mi><mo>_</mo><mn>2</mn><mo>,</mo><mo>&#x2026;</mo><mo>,</mo><mi mathvariant="bold">u</mi><mo>_</mo><mi>r</mi><mo>_</mo><mi>U</mi>
-              </math>, through the input weight matrix 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi>X</mi>
-              </math>. A projection matrix 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi>V</mi>
-              </math>, shared between all probes, reduces the dimensionality of the probe responses, followed by a non-linear activation. Each probe response is then mapped to a probe encoding 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi mathvariant="bold">e</mi><mo>_</mo><mi>l</mi>
-              </math> via a per-probe encoder matrix 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi>M</mi><mo>_</mo><mi>l</mi>
-              </math>. We sum the probe encodings to obtain the final model encoding 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi mathvariant="bold">e</mi>
-              </math>, which the predictor head maps to the task output 
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                <mi mathvariant="bold">y</mi>
-              </math>.
-            </p>    
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section hero is-small is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-full">
-        <div class="content">
-          <h2 class="title is-3">Results</h2>
-            <p>
-              ProbeX achieves state-of-the-art results on the task of training category prediction, accurately identifying the specific classes within a model’s training dataset. Excitingly, ProbeX can also align fine-tuned Stable Diffusion weights with language representations. This capability enables a new task: zero-shot model classification, where models are classified via a text prompt describing their training data. Using these aligned representations, ProbeX can also perform model retrieval.
-            </p>
-              <img src="/probex/static/images/retrieval.png" alt="Model retrieval" class="blend-img-background center-image" style="max-width: 85%; height: auto;" />
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
