--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><pre><sup>1</sup>ZJU   <sup>2</sup>Ant Group   <sup>3</sup>University of Notre Dame   <sup>4</sup>HKUST (Guangzhou)<br>CVPR 2025</pre></span>
+                    <span class="author-block"><pre><sup>1</sup>ZJU   <sup>2</sup>Ant Group   <sup>3</sup>University of Notre Dame   <sup>4</sup>HKUST (Guangzhou)<br>Underreview of NIPS 2025</pre></span>
                     <span class="eql-cntrb"><small><br><sup>✝</sup>Corresponding Authors</small></span>
                   </div>
 
