--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>STORM: Benchmarking Visual Rating of MLLMs with a Comprehensive Ordinal Regression Dataset</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/fengmian.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
