--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
-                      <a href="https://huggingface.co/datasets/ttlyy/ORD" target="_blank"
+                      <a href="https://huggingface.co/datasets/ttlyy/ORD/tree/main" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
