--- a/index.html
+++ b/index.html
@@ -146,7 +146,22 @@
 </section>
 <!-- End paper abstract -->
 
-
+<!--BibTex citation -->
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>@misc{wang2025stormbenchmarkingvisualrating,
+      title={STORM: Benchmarking Visual Rating of MLLMs with a Comprehensive Ordinal Regression Dataset}, 
+      author={Jinhong Wang and Shuo Tong and Jian liu and Dongqi Tang and Jintai Chen and Haochao Ying and Hongxia Xu and Danny Chen and Jian Wu},
+      year={2025},
+      eprint={2506.01738},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2506.01738}, 
+}</code></pre>
+    </div>
+</section>
+<!--End BibTex citation -->
 
 
   <footer class="footer">
